[package]
name = 'async_once'
version = '0.2.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
keywords = [
    'async',
    'lazy_static',
]
description = 'async once tool for lazy_static'
homepage = 'https://github.com/hjiayz/async_once'
repository = 'https://github.com/hjiayz/async_once'
readme = 'README.MD'
license = 'MIT OR Apache-2.0'

[dependencies]
futures = "0.3.5"

[dev-dependencies]
lazy_static = "1.4.0"
wasm-bindgen-test = "0.3.18"
tokio = "0.2.22"
async-std = "1.6.4"
wasm-bindgen-futures = "0.4.18"
