[package]
name = 'async_once'
version = '0.2.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
keywords = [
    'async',
    'lazy_static',
]
description = 'async once tool for lazy_static'
homepage = 'https://github.com/hjiayz/async_once'
repository = 'https://github.com/hjiayz/async_once'
readme = 'README.MD'
license = 'MIT OR Apache-2.0'

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
lazy_static = "1.4.0"
wasm-bindgen-test = "0.3.18"
wasm-bindgen-futures = "0.4.18"
futures-timer = "3.0.2"
gloo-timers = "0.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "0.3.1", features = ["rt"] }
async-std = "1.6.5"
smol = "1.2.4"
criterion = "0.3.3"